<resources>
    <string name="app_name">PaPapp</string>
    <string name="password_label">Password:</string>
    <string name="password">Password:</string>
    <string name="please_login_using_your_university_credentials">Please login using your University credentials!</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="username1">%s</string>
    <string name="menu">Cafeteria Menu</string>
    <string name="bus">Public Transport</string>
    <string name="library">Library</string>
    <string name="maps">Maps</string>
    <string name="courses">Courses</string>
    <string name="announcements">Announcements and Events</string>
    <string name="settings">Preferences</string>
    <string name="sound">SOUND</string>
    <string name="language">Language</string>
    <string name="dark">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="remember">Remember Me</string>
    <string name="announcements_title">Announcements</string>
    <string name="announcements_error_message">Error loading announcements</string>
    <string name="next_button_text">Load More</string>
    <string name="cafeteria">Cafeteria</string>
    <string name="rationcard">Ration Card</string>
    <string name="coupons">Buy Coupons</string>
    <string name="waitingtime">Waiting Time</string>
    <string name="reviews">Reviews</string>
    <string name="date">Date:</string>
    <string name="lunch_title">Launch:</string>
    <string name="first_dish">First Dish:</string>
    <string name="main_course_1">Main Course 1:</string>
    <string name="main_course_2">Main Course 2:</string>
    <string name="side">Side Dishes:</string>
    <string name="dinner_title">Dinner:</string>
    <string name="Points">Send Points</string>
    <string name="findUser">Find User</string>
    <string name="Profile">Profile</string>
    <string name="email">Email:</string>
    <string name="waitingtimeanddelay">Waiting Time and Delays</string>
    <string name="ptannouncements">P.T Announcements</string>
    <string name="stop">Show Stops</string>
    <string name="bussched">Bus Schedule</string>
    <string name="trainsched">Train Schedule</string>
    <string-array name="languages">
        <item>English</item>
        <item>Greek</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="sendpoints">Send Points to:</string>
    <string name="pointstosend">Points to Send:</string>
    <string name="select_user_prompt">Select a User</string>


</resources>