<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/searchOnMapButton"
        android:layout_width="333dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:background="@drawable/secondshape"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/bus" />

    <ImageButton
        android:id="@+id/mapActivityButton"
        android:layout_width="333dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:background="@drawable/firstshape"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134"
        app:srcCompat="@drawable/notification" />

    <ImageButton
        android:id="@+id/bookClassroomButton"
        android:layout_width="333dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:background="@drawable/foodshape"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313"
        app:srcCompat="@drawable/stop" />

    <ImageButton
        android:id="@+id/find_and_reserve_imgview"
        android:layout_width="333dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:background="@drawable/reviewsshape"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674"
        app:srcCompat="@drawable/train" />

    <TextView
        android:id="@+id/manage_and_rate"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:text="@string/ptannouncements"
        android:textAlignment="center"
        android:textColor="@color/logo2"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/issue_library_card"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:text="@string/stop"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/show_libraries"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:text="@string/bussched"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/waitTime"
        android:layout_width="333dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:background="@drawable/clockshape"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857"
        app:srcCompat="@drawable/clock" />

    <TextView
        android:id="@+id/time"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:text="@string/waitingtimeanddelay"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/findAndReserveButton"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:text="@string/trainsched"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

</androidx.constraintlayout.widget.ConstraintLayout>