<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/cafeMenu"
        android:layout_width="333dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:background="@drawable/foodshape"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/food2" />

    <ImageButton
        android:id="@+id/card"
        android:layout_width="333dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:background="@drawable/firstshape"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134"
        app:srcCompat="@drawable/card2" />

    <ImageButton
        android:id="@+id/waitTime"
        android:layout_width="333dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:background="@drawable/clockshape"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677"
        app:srcCompat="@drawable/clock" />

    <ImageButton
        android:id="@+id/coupon"
        android:layout_width="333dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:background="@drawable/couponshape"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313"
        app:srcCompat="@drawable/coupon" />

    <ImageButton
        android:id="@+id/Review"
        android:layout_width="333dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:background="@drawable/reviewsshape"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        app:srcCompat="@drawable/reviews" />

    <TextView
        android:id="@+id/rationcard"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:text="@string/rationcard"
        android:textAlignment="center"
        android:textColor="@color/logo2"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/issue_library_card"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:text="Buy Vouchers"
        android:textAlignment="center"
        android:textColor="@color/dark_100"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:text="@string/waitingtime"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:text="@string/reviews"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

</androidx.constraintlayout.widget.ConstraintLayout>